Update README and examples.ipynb

--- a/experiments/examples.ipynb
+++ b/experiments/examples.ipynb
@@ -15,10 +15,10 @@
    "source": [
     "## Preliminaries\n",
     "\n",
-    "This notebook and the codes can be accessed without any installations. To change the codes, it is necessary to install [Julia](https://julialang.org/downloads/) (tested for version 1.2.0), the [Projection](https://github.com/VaclavMacha/Projections/tree/develop) package and some standard packages such as `Random` or `Plots`. The `Projection` package can be installed using pkg REPL as follows\n",
+    "This notebook and the codes can be accessed without any installations. To change the codes, it is necessary to install [Julia](https://julialang.org/downloads/) (tested for version 1.2.0), the [Projection](https://github.com/VaclavMacha/Projections) package and some standard packages such as `Random` or `Plots`. The `Projection` package can be installed using pkg REPL as follows\n",
     "\n",
     "```julia\n",
-    "(v1.2) pkg> add https://github.com/VaclavMacha/Projections.git#develop\n",
+    "(v1.2) pkg> add https://github.com/VaclavMacha/Projections.git\n",
     "```\n",
     "\n",
     "After doing so, we load the packages and set the seed by running"
