--- a/experiments/examples.ipynb
+++ b/experiments/examples.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Projections onto the canonical simplex with additional linear inequalities\n",
     "\n",
-    "This repository is a complementary material to our paper [\"Projections onto the canonical simplex with additional linear inequalities\"](https://arxiv.org/), where we consider projections coming from the fields of distributionally robust optimization (DRO1 and DRO2)."
+    "This repository is a complementary material to our paper [\"Projections onto the canonical simplex with additional linear inequalities\"](https://arxiv.org/abs/1905.03488), where we consider projections coming from the fields of distributionally robust optimization (DRO1 and DRO2)."
    ]
   },
   {
